retrieve proxmox creds and put then in jenkins

--- a/pipelines/template-creator/Jenkinsfile
+++ b/pipelines/template-creator/Jenkinsfile
@@ -26,17 +26,19 @@ pipeline {
                     def credentialsId = 'proxmox-api-credentials'
                     def credentials = null
 
-                    withCredentials([string(credentialsId: credentialsId, variable: 'existingCredentials')]) {
-                        credentials = existingCredentials
+                    try {
+                        withCredentials([string(credentialsId: credentialsId, variable: 'existingCredentials')]) {
+                            credentials = existingCredentials
+                        }
+                    } catch (Exception e) {
+                        echo "Credentials not found: ${e.message}"
                     }
 
                     if (credentials == null || credentials.isEmpty()) {
                         echo "API credentials not found, generating new credentials."
-                        dir('pipelines/template-creator') {
-                            sh """
-                                python generate_proxmox_api_credentials.py --username ${params.PROXMOX_USERNAME} --password ${params.PROXMOX_PASSWORD} --host ${params.PROXMOX_HOST}
-                            """
-                        }
+                        sh """
+                            python generate_proxmox_api_credentials.py --username ${params.PROXMOX_USERNAME} --password ${params.PROXMOX_PASSWORD} --host ${params.PROXMOX_HOST}
+                        """
 
                         def proxmoxCredentials = readFile('proxmox_credentials.json')
                         def proxmoxCredentialsJson = readJSON(text: proxmoxCredentials)
@@ -47,20 +49,22 @@ pipeline {
                             echo '{"ticket": "${ticket}", "csrf_token": "${csrfToken}"}' > /tmp/proxmox_credentials.json
                         """
                         withCredentials([usernamePassword(credentialsId: 'jenkins-api', usernameVariable: 'JENKINS_USERNAME', passwordVariable: 'JENKINS_PASSWORD')]) {
-                            sh """
-                                curl -X POST http://localhost:8080/credentials/store/system/domain/_/createCredentials \
-                                --user ${JENKINS_USERNAME}:${JENKINS_PASSWORD} \
-                                --data-urlencode 'json={
-                                  "": "0",
-                                  "credentials": {
+                            def createCredentialsJson = """
+                            {
+                                "": "0",
+                                "credentials": {
                                     "scope": "GLOBAL",
                                     "id": "${credentialsId}",
                                     "secret": "/tmp/proxmox_credentials.json",
                                     "description": "Proxmox API credentials",
-                                    "$class": "org.jenkinsci.plugins.plaincredentials.impl.StringCredentialsImpl"
-                                  }
-                                }'
+                                    "stapler-class": "org.jenkinsci.plugins.plaincredentials.impl.StringCredentialsImpl"
+                                }
+                            }
                             """
+                            def createCredentialsCommand = "curl -X POST http://localhost:8080/credentials/store/system/domain/_/createCredentials " +
+                                "--user ${JENKINS_USERNAME}:${JENKINS_PASSWORD} " +
+                                "--data-urlencode 'json=${createCredentialsJson.replace('\n', '').replace(' ', '')}'"
+                            sh createCredentialsCommand
                         }
                     } else {
                         echo "Using existing API credentials."
