--- a/pipelines/template-creator/Jenkinsfile
+++ b/pipelines/template-creator/Jenkinsfile
@@ -36,9 +36,11 @@ pipeline {
 
                     if (credentials == null || credentials.isEmpty()) {
                         echo "API credentials not found, generating new credentials."
-                        sh """
-                            python generate_proxmox_api_credentials.py --username ${params.PROXMOX_USERNAME} --password ${params.PROXMOX_PASSWORD} --host ${params.PROXMOX_HOST}
-                        """
+                        dir('pipelines/template-creator') {
+                            sh """
+                                python generate_proxmox_api_credentials.py --username ${params.PROXMOX_USERNAME} --password ${params.PROXMOX_PASSWORD} --host ${params.PROXMOX_HOST}
+                            """
+                        }
 
                         def proxmoxCredentials = readFile('proxmox_credentials.json')
                         def proxmoxCredentialsJson = readJSON(text: proxmoxCredentials)
