--- a/pipelines/template-creator/Jenkinsfile
+++ b/pipelines/template-creator/Jenkinsfile
@@ -6,6 +6,7 @@ pipeline {
     }
     parameters {
         string(name: 'PROXMOX_IP', defaultValue: 'cyberops2.pizzasec.com', description: 'ProxMox IP address')
+        string(name: 'PROXMOX_NODE', defaultValue: 'cyberops2', description: 'ProxMox to build the templates on')
     }
     environment {
         PROXMOX_API_CREDS = credentials('proxmox-api-token')
@@ -31,6 +32,7 @@ pipeline {
                         sh """
                             python template-creator.py \
                                 --proxmox_ip ${params.PROXMOX_IP} \
+                                --proxmox_node ${params.PROXMOX_NODE} \
                                 --token_name ${token_name} \
                                 --token_secret ${token_secret}
                         """
