api will not work for qcows

--- a/pipelines/template-creator/Dockerfile
+++ b/pipelines/template-creator/Dockerfile
@@ -4,7 +4,7 @@ RUN apt-get update && apt-get install -y \
     qemu-utils \
     jq
 
-RUN pip install requests
+RUN pip install -r pipelines/template-creator/requirements.txt
 
 COPY . /app
 WORKDIR /app
