--- a/pipelines/template-creator/Jenkinsfile
+++ b/pipelines/template-creator/Jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
     environment {
         PROXMOX_API_CREDS = credentials('proxmox-api-token')
         PROXMOX_SSH_CREDS = credentials('root-proxmox')
-        TEMPLATE_SSH_CREDS = credentials('ssh-key')
+        TEMPLATE_SSH_CRED_ID = 'ssh-key'
     }
     stages {
         stage('Checkout') {
@@ -32,7 +32,7 @@ pipeline {
                         def token_secret = PROXMOX_API_CREDS.split(':')[1]
                         def proxmox_user = PROXMOX_SSH_CREDS.split(':')[0]
                         def proxmox_password = PROXMOX_SSH_CREDS.split(':')[1]
-                        def template_ssh_key = TEMPLATE_SSH_CREDS
+                        def template_ssh_key = sh(returnStdout: true, script: "echo \${TEMPLATE_SSH_CRED_ID}").trim()
 
                         sh """
                             python template-creator.py \
